# DesignPatterns

./: README.md
factory/: CMakeLists.txt  Factory.xml  README.md  factory.cpp  factory.hpp  tests.cpp
introduction/: code.py  introduction.xml  test.py
observer/: Observer.xml  README.md  code.py  notifiers.py  subscribers.py  test.py
singleton/: CMakeLists.txt  README.md  Singleton.xml  singleton.cpp  singleton.hpp  tests.cpp
strategy/: README.md  README.txt  code.py  strategy.xml  test.py
